# Softdesk_API

./: README.md  db.sqlite3  pyproject.toml
config/: permissions.py  settings.py  urls.py
issues/: admin.py  models.py  serializers.py  urls.py  views.py
issues/migrations/: 0001_initial.py
projects/: admin.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
