[project]
name = "softdesk"
version = "0.1.0"
description = ""
authors = [
    {name = "SamuelGuillot",email = "samuel.guillot.pro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.3.0,<6.0.0)",
    "setuptools (>=82.0.1,<83.0.0)",
    "drf-nested-routers (>=0.95.0,<0.96.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

